[package]
name = "healm"
description = """**He**ap **al**located **me**rkle tree"""
categories = ["cryptography", "data-structures", "no-std"]
keywords = ["merkle", "tree", "hash", "data", "structure"]

repository = "https://github.com/ureeves/healm"
authors = ["Eduardo Leegwater Simões <eduardols@protonmail.com>"]
version = "0.1.0"

edition = "2021"
license = "MIT"

exclude = ["/docs", "/.github", ".gitignore"]

[dependencies]
blake3 = { version = "1", default-features = false, optional = true }

[dev-dependencies]
paste = "1"
rand = "0.8"

[features]
bench = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
